--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Said LAHARRAF">Said <br> LAHARRAF</h1>
+          <h1 class="name" title="Said LAHARRAF">Said LAHARRAF</h1>
 
           <p class="title">Data Engineer & AI Specialist</p>
         </div>
