local changes before rebase

--- a/index.html
+++ b/index.html
@@ -195,10 +195,9 @@
         </header>
 
         <section class="about-text">
-          <p>
-            Recent graduate passionate about data engineering and artificial intelligence, I transform complex data into actionable insights and intelligent solutions. Curious and results-oriented, I enjoy tackling technical challenges that bring real added value to businesses.
+          <p style="  text-align: justify;">
+            Passionate about using data to solve meaningful problems, I work across machine learning, artificial intelligence, and digital innovation to create solutions that matter. My background in digital transformation and sports technology taught me how to understand performance, behavior, and human potential through data. Today, I focus on building intelligent systems that enhance health diagnostics, optimize decisions, and drive sustainable digital change. I thrive on learning, experimenting, and delivering results that make technology truly useful.
           </p>
-
         </section>
 
 
